Update hero headline

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="hero-block">
             <div class="hero-bg"></div>
             <div class="container hero-inner">
-                <h1 class="hero-title">Більше 1000 клієнтів вже довірилися нам</h1>
+                <h1 class="hero-title">Якісне виконання висотних робіт</h1>
                 <p class="hero-subtitle">Клієнти оцінили професіоналізм «alpiK»,<br>адже наші відносини побудовані на
                     партнерстві та довірі</p>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
