--- a/en/index.html
+++ b/en/index.html
@@ -51,7 +51,7 @@
         <section class="hero-block">
             <div class="hero-bg"></div>
             <div class="container hero-inner">
-                <h1 class="hero-title">More than 1000 clients have already trusted us</h1>
+                <h1 class="hero-title">Якісне виконання висотних робіт</h1>
                 <p class="hero-subtitle">Clients appreciate the professionalism of “alpiK”,<br>because our relationships are built on
                     partnership and trust</p>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
