Unify service thumbnails and renumber services

--- a/en/our-services.html
+++ b/en/our-services.html
@@ -62,7 +62,7 @@
                 <h2 class="section-title">Services list</h2>
                 <p class="services-catalog-lead">Choose a service — we’ll recommend the best approach and provide a cost estimate.</p>
 
-                <div class="services-catalog" role="list">
+                <div class="services-catalog services-catalog--uniform" role="list">
 
 
                     <a class="services-catalog-card" role="listitem" href="/en/service-01/" aria-label="Facade repair, finishing, cladding, painting & hydrophobic protection">
@@ -107,27 +107,27 @@
                         <h3 class="services-catalog-title">Translucent structures installation</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-13/" aria-label="Advertising structures & banner installation">
-                        <div class="services-catalog-num">13</div>
+                        <div class="services-catalog-num">11</div>
                         <h3 class="services-catalog-title">Advertising structures & banner installation</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-14/" aria-label="Snow, icicle & ice removal">
-                        <div class="services-catalog-num">14</div>
+                        <div class="services-catalog-num">12</div>
                         <h3 class="services-catalog-title">Snow, icicle & ice removal</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-15/" aria-label="Facade & window washing (incl. industrial sites)">
-                        <div class="services-catalog-num">15</div>
+                        <div class="services-catalog-num">13</div>
                         <h3 class="services-catalog-title">Facade & window washing (incl. industrial sites)</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-16/" aria-label="Solar panels & inverter installation">
-                        <div class="services-catalog-num">16</div>
+                        <div class="services-catalog-num">14</div>
                         <h3 class="services-catalog-title">Solar panels & inverter installation</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-17/" aria-label="Sealing interpanel joints">
-                        <div class="services-catalog-num">17</div>
+                        <div class="services-catalog-num">15</div>
                         <h3 class="services-catalog-title">Sealing interpanel joints</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-18/" aria-label="Decorations & lighting installation">
-                        <div class="services-catalog-num">18</div>
+                        <div class="services-catalog-num">16</div>
                         <h3 class="services-catalog-title">Decorations & lighting installation</h3>
                     </a>
 
