--- a/our-services.html
+++ b/our-services.html
@@ -65,7 +65,7 @@
                 <h2 class="section-title">Перелік послуг</h2>
                 <p class="services-catalog-lead">Оберіть напрямок робіт — підкажемо оптимальне рішення і прорахуємо вартість.</p>
 
-                <div class="services-catalog" role="list">
+                <div class="services-catalog services-catalog--uniform" role="list">
 
 
                     <a class="services-catalog-card" role="listitem" href="/service-01/" aria-label="Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів">
@@ -110,27 +110,27 @@
                         <h3 class="services-catalog-title">Монтаж світлопрозорих конструкцій</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-13/" aria-label="Монтаж рекламних конструкцій, навішування банерів">
-                        <div class="services-catalog-num">13</div>
+                        <div class="services-catalog-num">11</div>
                         <h3 class="services-catalog-title">Монтаж рекламних конструкцій, навішування банерів</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-14/" aria-label="Очищення снігу, бурульок і наледі з покрівлі та конструкцій">
-                        <div class="services-catalog-num">14</div>
+                        <div class="services-catalog-num">12</div>
                         <h3 class="services-catalog-title">Очищення снігу, бурульок і наледі з покрівлі та конструкцій</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-15/" aria-label="Миття фасадів будівель, вікон та промислових цехів">
-                        <div class="services-catalog-num">15</div>
+                        <div class="services-catalog-num">13</div>
                         <h3 class="services-catalog-title">Миття фасадів будівель, вікон та промислових цехів</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-16/" aria-label="Монтаж сонячних панелей та інверторів">
-                        <div class="services-catalog-num">16</div>
+                        <div class="services-catalog-num">14</div>
                         <h3 class="services-catalog-title">Монтаж сонячних панелей та інверторів</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-17/" aria-label="Герметизація міжпанельних швів">
-                        <div class="services-catalog-num">17</div>
+                        <div class="services-catalog-num">15</div>
                         <h3 class="services-catalog-title">Герметизація міжпанельних швів</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-18/" aria-label="Монтаж декорацій і освітлення">
-                        <div class="services-catalog-num">18</div>
+                        <div class="services-catalog-num">16</div>
                         <h3 class="services-catalog-title">Монтаж декорацій і освітлення</h3>
                     </a>
 
