Remove service 01; renumber catalogs

--- a/en/montage.html
+++ b/en/montage.html
@@ -68,29 +68,29 @@
                 <h2 class="section-title">Installation services</h2>
                 <p class="services-catalog-lead">Choose the type of installation — we’ll recommend the best approach and provide an estimate.</p>
 
-                <div class="services-catalog" role="list">
+                <div class="services-catalog services-catalog--uniform" role="list">
                     <a class="services-catalog-card" role="listitem" href="/en/service-03/" aria-label="Installation of chimneys & air ducts">
-                        <div class="services-catalog-num">03</div>
+                        <div class="services-catalog-num">01</div>
                         <h3 class="services-catalog-title">Installation of chimneys & air ducts</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-07/" aria-label="Gutters, flashings & snow-melting systems">
-                        <div class="services-catalog-num">07</div>
+                        <div class="services-catalog-num">02</div>
                         <h3 class="services-catalog-title">Gutters, flashings & snow-melting systems</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-09/" aria-label="Ventilated facade systems installation">
-                        <div class="services-catalog-num">09</div>
+                        <div class="services-catalog-num">03</div>
                         <h3 class="services-catalog-title">Ventilated facade systems installation</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-10/" aria-label="Translucent structures installation">
-                        <div class="services-catalog-num">10</div>
+                        <div class="services-catalog-num">04</div>
                         <h3 class="services-catalog-title">Translucent structures installation</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-13/" aria-label="Advertising structures & banner installation">
-                        <div class="services-catalog-num">13</div>
+                        <div class="services-catalog-num">05</div>
                         <h3 class="services-catalog-title">Advertising structures & banner installation</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-18/" aria-label="Decorations & lighting installation">
-                        <div class="services-catalog-num">18</div>
+                        <div class="services-catalog-num">06</div>
                         <h3 class="services-catalog-title">Decorations & lighting installation</h3>
                     </a>
                 </div>
