--- a/en/repair.html
+++ b/en/repair.html
@@ -68,25 +68,21 @@
                 <h2 class="section-title">Repair services</h2>
                 <p class="services-catalog-lead">Choose the type of repair — we’ll recommend the best approach and provide an estimate.</p>
 
-                <div class="services-catalog" role="list">
-                    <a class="services-catalog-card" role="listitem" href="/en/service-01/" aria-label="Facade repair, finishing, cladding, painting & hydrophobic protection">
-                        <div class="services-catalog-num">01</div>
-                        <h3 class="services-catalog-title">Facade repair, finishing, cladding, painting & hydrophobic protection</h3>
-                    </a>
+                <div class="services-catalog services-catalog--uniform" role="list">
                     <a class="services-catalog-card" role="listitem" href="/en/service-02/" aria-label="Chimney stack repair & modernization">
-                        <div class="services-catalog-num">02</div>
+                        <div class="services-catalog-num">01</div>
                         <h3 class="services-catalog-title">Chimney stack repair & modernization</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-05/" aria-label="Grain elevator overhaul: silo cleaning & repair">
-                        <div class="services-catalog-num">05</div>
+                        <div class="services-catalog-num">02</div>
                         <h3 class="services-catalog-title">Grain elevator overhaul: silo cleaning & repair</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-06/" aria-label="Roof repair & painting">
-                        <div class="services-catalog-num">06</div>
+                        <div class="services-catalog-num">03</div>
                         <h3 class="services-catalog-title">Roof repair & painting</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-17/" aria-label="Sealing interpanel joints">
-                        <div class="services-catalog-num">17</div>
+                        <div class="services-catalog-num">04</div>
                         <h3 class="services-catalog-title">Sealing interpanel joints</h3>
                     </a>
                 </div>
