--- a/repair.html
+++ b/repair.html
@@ -68,25 +68,21 @@
                 <h2 class="section-title">Перелік ремонтних робіт</h2>
                 <p class="services-catalog-lead">Оберіть напрямок ремонту — підкажемо оптимальне рішення і прорахуємо вартість.</p>
 
-                <div class="services-catalog" role="list">
-                    <a class="services-catalog-card" role="listitem" href="/service-01/" aria-label="Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів">
-                        <div class="services-catalog-num">01</div>
-                        <h3 class="services-catalog-title">Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів</h3>
-                    </a>
+                <div class="services-catalog services-catalog--uniform" role="list">
                     <a class="services-catalog-card" role="listitem" href="/service-02/" aria-label="Ремонт і модернізація димових труб">
-                        <div class="services-catalog-num">02</div>
+                        <div class="services-catalog-num">01</div>
                         <h3 class="services-catalog-title">Ремонт і модернізація димових труб</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-05/" aria-label="Комплексний ремонт елеваторів; очищення та ремонт силосів">
-                        <div class="services-catalog-num">05</div>
+                        <div class="services-catalog-num">02</div>
                         <h3 class="services-catalog-title">Комплексний ремонт елеваторів; очищення та ремонт силосів</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-06/" aria-label="Ремонт і фарбування дахів">
-                        <div class="services-catalog-num">06</div>
+                        <div class="services-catalog-num">03</div>
                         <h3 class="services-catalog-title">Ремонт і фарбування дахів</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-17/" aria-label="Герметизація міжпанельних швів">
-                        <div class="services-catalog-num">17</div>
+                        <div class="services-catalog-num">04</div>
                         <h3 class="services-catalog-title">Герметизація міжпанельних швів</h3>
                     </a>
                 </div>
