--- a/montage.html
+++ b/montage.html
@@ -68,29 +68,29 @@
                 <h2 class="section-title">Перелік монтажних робіт</h2>
                 <p class="services-catalog-lead">Оберіть напрямок монтажу — підкажемо оптимальне рішення і прорахуємо вартість.</p>
 
-                <div class="services-catalog" role="list">
+                <div class="services-catalog services-catalog--uniform" role="list">
                     <a class="services-catalog-card" role="listitem" href="/service-03/" aria-label="Монтаж димоходів і повітропроводів">
-                        <div class="services-catalog-num">03</div>
+                        <div class="services-catalog-num">01</div>
                         <h3 class="services-catalog-title">Монтаж димоходів і повітропроводів</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-07/" aria-label="Монтаж водостічних систем, відливів та систем сніготанення">
-                        <div class="services-catalog-num">07</div>
+                        <div class="services-catalog-num">02</div>
                         <h3 class="services-catalog-title">Монтаж водостічних систем, відливів та систем сніготанення</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-09/" aria-label="Монтаж вентильованих фасадних систем">
-                        <div class="services-catalog-num">09</div>
+                        <div class="services-catalog-num">03</div>
                         <h3 class="services-catalog-title">Монтаж вентильованих фасадних систем</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-10/" aria-label="Монтаж світлопрозорих конструкцій">
-                        <div class="services-catalog-num">10</div>
+                        <div class="services-catalog-num">04</div>
                         <h3 class="services-catalog-title">Монтаж світлопрозорих конструкцій</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-13/" aria-label="Монтаж рекламних конструкцій, навішування банерів">
-                        <div class="services-catalog-num">13</div>
+                        <div class="services-catalog-num">05</div>
                         <h3 class="services-catalog-title">Монтаж рекламних конструкцій, навішування банерів</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-18/" aria-label="Монтаж декорацій і освітлення">
-                        <div class="services-catalog-num">18</div>
+                        <div class="services-catalog-num">06</div>
                         <h3 class="services-catalog-title">Монтаж декорацій і освітлення</h3>
                     </a>
                 </div>
